# python-appattest

./: LICENSE  README.md  pyproject.toml  setup.cfg
appattest/: __init__.py  appattest.py
tests/: attest.py
