[metadata]
name = appattest
version = 0.0.1
author = Philip Prindeville
author_email = philipp@redfish-solutions.com
description = iOS AppAttest attestation library
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/pprindeville/python-appattest
license = MIT
keywords = appattest attestation
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.7

